// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<li
  className="root isRootActive"
  id="my-tab"
>
  <a
    className="link"
    href="/tab-1"
    id="my-tab__link"
    onClick={[Function]}
  >
    <span
      className="linkContent"
    >
      <span>
        before label
      </span>
      <span
        className="label"
        id="my-tab__label"
      >
        Tab 1
      </span>
      <span>
        after label
      </span>
    </span>
  </a>
</li>
`;

exports[`rendering renders correctly with mandatory props 1`] = `
<li
  className="root "
>
  <a
    className="link"
    href="/tab-1"
    onClick={null}
  >
    <span
      className="linkContent"
    >
      <span
        className="label"
      >
        Tab 1
      </span>
    </span>
  </a>
</li>
`;
